setting activity 구현 + xml 완료

--- a/TIM/app/src/main/res/values/strings.xml
+++ b/TIM/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TIM</string>
+    <string name="timerInfo">&#160;&#160;뽀모도로 타이머란 집중시간과 휴식시간을 적절히 분배하여 관리할 수 있는 타이머로, 25분의 집중시간과 5분의 쉬는시간을 한 사이클로 하는 것이 기본입니다.\n\n
+    &#160;일반 타이머란 일반적인 타이머와 같으며, 0초부터 시작하여 종료할 때까지 동작하는 타이머입니다.</string>
 </resources>
